--- a/games/word-mash.html
+++ b/games/word-mash.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Nigel's Tea - Word Mash</title>
-    <link rel="icon" href="logo.png" type="image/png">
+    <link rel="icon" href="../logo.png" type="image/png">
     <style>
         /* Global Styles */
         * {
