--- a/games/word-mash.html
+++ b/games/word-mash.html
@@ -268,15 +268,15 @@
 
     <!-- Navigation Bar -->
     <div class="navbar">
-        <a href="index.html" class="logo">
-            <img src="logo.png" alt="Nigel's Tea">
+        <a href="../index.html" class="logo">
+            <img src="../logo.png" alt="Nigel's Tea">
             Nigel's Tea
         </a>
         <div class="menu">
-            <a href="index.html">Home</a>
-            <a href="games.html" class="active">Games</a>
-            <a href="#">Projects</a>
-            <a href="#">About Us</a>
+            <a href="../index.html">Home</a>
+            <a href="../games.html" class="active">Games</a>
+            <a href="../projects.html">Projects</a>
+            <a href="../about.html">About Us</a>
         </div>
     </div>
 
