--- a/games/word-mash.html
+++ b/games/word-mash.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Nigel's Tea - Games</title>
+    <title>Nigel's Tea - Tea Word Mash</title>
     <link rel="icon" href="logo.png" type="image/png">
     <style>
         /* Global Styles */
@@ -280,20 +280,11 @@
         </div>
     </div>
 
-    <!-- Games Section -->
-    <div class="games-section">
-        <h1>Our Exciting Tea-Themed Games</h1>
-        <div class="game-buttons">
-            <a href="/games/2dtea.html">Tea Maze Adventure</a>
-            <a href="/games/tea-clicker.html">Tea Clicker</a>
-            <a href="/games/flappy-mug.html">Flappy Mug</a>
-            <a href="/games/teaquest/game.html">TeaQuest 3D</a>
-        </div>
-    </div>
+    
 
     <!-- Tea Wordle Game Section -->
     <div class="tea-wordle-section">
-        <h1>Tea Wordle</h1>
+        <h1>Tea Word Mash</h1>
         <div id="message"></div>
         <div id="grid-container"></div>
         <div id="keyboard"></div>
