--- a/games/tea-jump.html
+++ b/games/tea-jump.html
@@ -218,7 +218,7 @@
 
     <!-- Footer -->
     <div class="footer">
-        © 2025 Nigel's Tea. All rights reserved.
+        (C) 2025 Nigel's Tea. All rights reserved.
     </div>
 
     <!-- JavaScript -->
