--- a/games.html
+++ b/games.html
@@ -180,6 +180,7 @@
         <div class="game-buttons">
             <a href="/games/2dtea.html">Tea Maze Adventure</a>
             <a href="/games/tea-clicker.html">Tea Clicker</a>
+            <a href="/games/tea-jump.html">Tea Jump</a>
             <a href="/games/flappy-mug.html">Flappy Mug</a>
             <a href="/games/teaquest/game.html">TeaQuest 3D</a>
         </div>
