--- a/games/tea-jump.html
+++ b/games/tea-jump.html
@@ -214,6 +214,12 @@
         <h1>Tea Jump</h1>
         <canvas id="gameCanvas" width="800" height="250"></canvas>
         <p id="gameInstructions">Press Space or tap to jump. Avoid soft drinks and people!</p>
+    </div
+
+    <div class="content">
+        <div class="lorem">
+            <p>The aim of this game is to avoid the fizzy drinks and tea drinkers.</p>
+        </div>
     </div>
 
     <!-- Footer -->
